# plyCal

./: CMakeLists.txt
PlyCal/: CMakeLists.txt  calibrator.cpp  calibrator.h  image_polygon.cpp  image_polygon.h  pointcloud_polygon.cpp  pointcloud_polygon.h  utils.h
PlyCal_qt/: CMakeLists.txt  cqtopencvviewergl.cpp  cqtopencvviewergl.h  data_reader.cpp  data_reader.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
PlyCal_test/: CMakeLists.txt  test_image_polygon.cpp  test_pointcloud_polygon.cpp
cmake/: FindBoost.cmake  FindQt.cmake  FindVTK.cmake
